src/specification.bnf
{
  parserClass="com.thoughtworks.gauge.parser.SpecParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Spec"
  psiImplClassSuffix="Impl"
  psiPackage="com.thoughtworks.gauge.language.psi"
  psiImplPackage="com.thoughtworks.gauge.language.psi.impl"

  elementTypeHolderClass="com.thoughtworks.gauge.language.token.SpecTokenTypes"
  elementTypeClass="com.thoughtworks.gauge.language.token.SpecElementType"
  tokenTypeClass="com.thoughtworks.gauge.language.token.SpecTokenType"

  psiImplUtilClass="com.thoughtworks.gauge.language.psi.SpecPsiImplUtil"

}

specFile ::= specDetail scenario+
private specDetail ::= (comment)*  specHeading table? (step|comment)*
scenario ::= scenarioHeading (step | comment)*
private comment ::= COMMENT
private specHeading ::= SPEC_HEADING
private scenarioHeading ::= SCENARIO_HEADING
step ::= STEP table?    {mixin="com.thoughtworks.gauge.language.psi.impl.SpecStepImpl"
                                   implements="com.thoughtworks.gauge.language.psi.SpecNamedElement" methods = [getStepName]}
table ::= TABLE_HEADER TABLE_ROW*
